crates/store/re_arrow_combinators/tests/snapshots/explode__empty_input.snap
---
source: crates/store/re_arrow_combinators/tests/explode.rs
expression: "format!(\"{}\", DisplayRB(result))"
---
┌───────────────────────────────────┐
│ col                               │
│ ---                               │
│ type: nullable List[nullable i32] │
╞═══════════════════════════════════╡
└───────────────────────────────────┘
