crates/store/re_arrow_combinators/tests/snapshots/explode__nested_lists.snap
---
source: crates/store/re_arrow_combinators/tests/explode.rs
expression: "format!(\"{}\", DisplayRB(result))"
---
┌──────────────────────────────────────────────────┐
│ col                                              │
│ ---                                              │
│ type: nullable List[nullable List[nullable i32]] │
╞══════════════════════════════════════════════════╡
│ [[1, 2]]                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[3]]                                            │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ [[4, 5, 6]]                                      │
└──────────────────────────────────────────────────┘
